fix: use default body font size on iOS (17px)

--- a/packages/aura/src/typography.css
+++ b/packages/aura/src/typography.css
@@ -34,7 +34,6 @@
 
       /* Support iOS dynamic text size */
       font: -apple-system-body;
-      --aura-base-font-size: 14;
     }
   }
 }
